kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: base42-web
  namespace: base42-web
spec:
  ingressClassName: nginx
  rules:
  - host: web.42.mk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: base42-web
            port:
              number: 8080
